--- a/Wpf/WpfText.de.resx
+++ b/Wpf/WpfText.de.resx
@@ -134,7 +134,7 @@
     <comment>from GoogleTranslator2</comment>
   </data>
   <data name="AwayDialogAssignment" xml:space="preserve">
-    <value>ABTRETUNG</value>
+    <value>Abtretung</value>
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="AwayDialogAssignmentHint" xml:space="preserve">
@@ -146,7 +146,7 @@
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="AwayDialogDiscard" xml:space="preserve">
-    <value>VERWERFEN</value>
+    <value>Verwerfen</value>
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="AwayDialogDiscardEUA" xml:space="preserve">
@@ -154,7 +154,7 @@
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="AwayDialogExtend" xml:space="preserve">
-    <value>ERWEITERN</value>
+    <value>Erweitern</value>
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="AwayDialogExtendEUA" xml:space="preserve">
@@ -166,11 +166,11 @@
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="AwayDialogTimeFrame" xml:space="preserve">
-    <value>ZEITFENSTER</value>
+    <value>Zeitfenster</value>
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="AwayDialogWorkItem" xml:space="preserve">
-    <value>ARBEITSMITTEL</value>
+    <value>Arbeitsmittel</value>
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="AwayDialogWorkItemHint" xml:space="preserve">
