--- a/Wpf/WpfText.resx
+++ b/Wpf/WpfText.resx
@@ -130,7 +130,7 @@
     <value>Grindstone</value>
   </data>
   <data name="AwayDialogAssignment" xml:space="preserve">
-    <value>ASSIGNMENT</value>
+    <value>Assignment</value>
   </data>
   <data name="AwayDialogAssignmentHint" xml:space="preserve">
     <value>Assignment</value>
@@ -139,13 +139,13 @@
     <value>Welcome Back!</value>
   </data>
   <data name="AwayDialogDiscard" xml:space="preserve">
-    <value>DISCARD</value>
+    <value>Discard</value>
   </data>
   <data name="AwayDialogDiscardEUA" xml:space="preserve">
     <value>Nothing will be done with the time you were away.</value>
   </data>
   <data name="AwayDialogExtend" xml:space="preserve">
-    <value>EXTEND</value>
+    <value>Extend</value>
   </data>
   <data name="AwayDialogExtendEUA" xml:space="preserve">
     <value>The time slice you were timing with will be extended to cover the time you were away.</value>
@@ -154,10 +154,10 @@
     <value>Resume timing</value>
   </data>
   <data name="AwayDialogTimeFrame" xml:space="preserve">
-    <value>TIME FRAME</value>
+    <value>Time frame</value>
   </data>
   <data name="AwayDialogWorkItem" xml:space="preserve">
-    <value>WORK ITEM</value>
+    <value>Work item</value>
   </data>
   <data name="AwayDialogWorkItemHint" xml:space="preserve">
     <value>Work item</value>
